# mirage

./: .gitignore  CMakeLists.txt  README  README.md  armor.c  armor.h  audio.c  audio.h  command_processing.c  command_processing.h  config.json  config_manager.c  config_manager.h  config_parser.c  config_parser.h  curl_download.c  curl_download.h  defines.h  detect.cpp  detect.h  detectnet.cpp  devices.c  devices.h  frame_rate_tracker.c  frame_rate_tracker.h  image_utils.c  image_utils.h  logging.c  logging.h  main.c  main.h  mirage.c  mirage.h  mosquitto_comms.c  mosquitto_comms.h  secrets.h  typing_static.c  utils.c  utils.h  version.h
ui_assets/mk2/: IronMan-UI-Altitude-Animated-1.json  IronMan-UI-Batt-Animated.json  IronMan-UI-Heading-Animated-1.json  IronMan-UI-Intro.json  IronMan-UI-Pedestal-Animated-V2.json  IronMan-UI-Pitch-Animated-1.json  IronMan-UI-Reticle01Idle-Animated.json  IronMan-UI-Sign-Animated.json
